# Dira_Lehaskir

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: Dockerfile  main.py  pyproject.toml  settings.py
api/api/: deps.py
api/api/routers/: geo.py  listings.py  scrape.py
api/api/schemas/: listing.py  scrape.py
api/tests/: conftest.py  test_geo.py  test_import_isolation.py  test_listings.py  test_scrape.py
docs/: ARCHITECTURE.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: Combobox.test.tsx  Combobox.tsx  ErrorBoundary.tsx  FilterBar.tsx  FilterPanel.tsx  FilterPopover.tsx  ListingCard.test.tsx  ListingCard.tsx  ListingDetail.test.tsx  ListingDetail.tsx  MapView.tsx  ScrapeButton.test.tsx  ScrapeButton.tsx
frontend/src/hooks/: useFavorites.ts  useGeo.ts  useListings.ts
frontend/src/pages/: Home.tsx
frontend/src/test/: fixtures.ts
frontend/src/types/: listing.ts
frontend/src/utils/: circle.test.ts  circle.ts  formatAge.ts
scraper/: Dockerfile  alembic.ini  pyproject.toml
scraper/dirascan/: cities.py  cli.py  runner.py  settings.py  stealth.py  worker.py
scraper/dirascan/base/: crawler.py
scraper/dirascan/crawlers/: facebook.py  madlan.py  yad2.py
scraper/dirascan/db/: crud.py  models.py  session.py
scraper/dirascan/nlp/: hebrew.py
scraper/migrations/: env.py
scraper/migrations/versions/: 001_initial_schema.py  002_add_indexes.py  003_add_fk_and_check_constraints.py  004_add_phone_column.py  005_add_queued_status.py  006_add_neighborhood_index.py  007_add_started_at.py
scraper/tests/: conftest.py  test_crawlers_live.py  test_facebook_crawler.py  test_madlan_crawler.py  test_nlp.py  test_worker.py  test_yad2_crawler.py
scraper/tests/fixtures/: __init__.py  facebook_posts.py  madlan_payloads.py  yad2_feed.py
