[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dirascan-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.*",
    "uvicorn[standard]==0.30.*",
    "pydantic==2.7.*",
    "pydantic-settings==2.3.*",
    "SQLAlchemy[asyncio]==2.0.*",
    "psycopg2-binary==2.9.*",
    "geoalchemy2==0.15.*",
    # dirascan package is available via ./scraper volume mount — no pip install needed
]
