[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dirascan"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "playwright==1.44.*",
    "SQLAlchemy[asyncio]==2.0.*",
    "psycopg2-binary==2.9.*",
    "alembic==1.13.*",
    "pydantic==2.7.*",
    "pydantic-settings==2.3.*",
    "geoalchemy2==0.15.*",
    "python-dotenv==1.0.*",
    "httpx==0.27.*",
    "parsel==1.9.*",
    "click>=8.1",
    "facebook-scraper==0.2.*",
    "tenacity==8.*",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.*",
    "pytest-asyncio==0.23.*",
    "pytest-mock==3.14.*",
    "black==24.*",
    "ruff==0.4.*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: hits real Yad2/Madlan/Facebook over the network (opt-in; pass --run-live or set RUN_LIVE_CRAWLER_TESTS=1)",
]

[project.scripts]
dirascan = "dirascan.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dirascan*"]
